update order of experience and covid19 paper

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Jaydeep Mistry</title>
     <meta name="Keywords"
         content="HTML, CSS, Javascript, GitHub, Personal Website, Jupyter Notebooks, Jaydeep Mistry, GIS, data analyst, data science">
-    <meta name="Description" content="The personal website of Jaydeep Mistry. It is made to resemble a Jupyter Notebook">
+    <meta name="Description"
+        content="The personal website of Jaydeep Mistry. It is made to resemble a Jupyter Notebook">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -67,13 +68,13 @@
                         <a class="nav-link" href="#cell-skills">Skills</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#cell-experiences">Experiences</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#cell-education">Education</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#cell-contact">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#cell-experiences">Experiences</a>
                     </li>
                 </ul>
             </div>
@@ -181,6 +182,42 @@
             </div>
         </div>
 
+        <div id="cell-experiences" class="pt-cell bg-white">
+            <div class="media">
+                <div class='ml-2 mr-2 text-primary'>
+                    In [5]:
+                </div>
+                <div class="media-body">
+                    <div class="card bg-light">
+                        <div class="card-body">
+                            <div>
+                                Jaydeep_Mistry.experiences()
+                            </div>
+                            <div>
+                                <a class="text-info font-italic"># You can filter the cards below!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="media mt-3">
+                <div class='mr-2 text-danger'>
+                    Out [5]:
+                </div>
+                <div class="media-body">
+                    <div class="mb-2">
+
+                        <div id="experience_filters" class="btn-group-toggle" data-toggle="buttons">
+                            Filters:
+                        </div>
+                    </div>
+
+                    <div id="experience-cards" class="card-columns">
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div id="cell-education" class="pt-cell bg-white">
             <div class="media">
                 <div class='ml-2 mr-2 text-primary'>
@@ -262,42 +299,6 @@
             </div>
         </div>
 
-        <div id="cell-experiences" class="pt-cell bg-white">
-            <div class="media">
-                <div class='ml-2 mr-2 text-primary'>
-                    In [5]:
-                </div>
-                <div class="media-body">
-                    <div class="card bg-light">
-                        <div class="card-body">
-                            <div>
-                                Jaydeep_Mistry.experiences()
-                            </div>
-                            <div>
-                                <a class="text-info font-italic"># You can filter the cards below!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="media mt-3">
-                <div class='mr-2 text-danger'>
-                    Out [5]:
-                </div>
-                <div class="media-body">
-                    <div class="mb-2">
-
-                        <div id="experience_filters" class="btn-group-toggle" data-toggle="buttons">
-                            Filters:
-                        </div>
-                    </div>
-
-                    <div id="experience-cards" class="card-columns">
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div id="cell-disclaimer" class="pt-cell pb-cell bg-white">
             <div class="media">
                 <div class='ml-2 mr-2 text-primary'>
@@ -321,7 +322,7 @@
                     <div class="card text-white bg-dark">
                         <div class="card-body">
                             <p class="card-text text-break">
-                                <pre class="text-white">
+                            <pre class="text-white">
 <div class="text-danger">Not a real notebook or kernel</div>
 Website made by © <a href="https://www.linkedin.com/in/jaydeep-mistry/" target="_blank">Jaydeep Mistry</a>
 Made to resemble <a href="https://jupyter.org/" target="_blank">Jupyter Notebooks</a>
@@ -359,7 +360,7 @@ Styled using <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></
             };
         };
 
-        let requestURL = "https://raw.githubusercontent.com/jrmistry/jrmistry.github.io/master/assets/profile.json";
+        let requestURL = "https://jrmistry.github.io/assets/profile.json";
         let request = new XMLHttpRequest();
         request.open('GET', requestURL);
         request.responseType = 'json';
