minor update to description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="Keywords"
         content="HTML, CSS, Javascript, GitHub, Personal Website, Jupyter Notebooks, Jaydeep Mistry, GIS, data analyst, data science">
     <meta name="Description"
-        content="The personal website of Jaydeep Mistry. It is made to resemble a Jupyter Notebook">
+        content="The personal website of Jaydeep Mistry.">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -99,9 +99,6 @@
                             </div>
                             <div>
                                 Jaydeep_Mistry.describe()
-                            </div>
-                            <div>
-                                Jaydeep_Mistry.face.plot()
                             </div>
                         </div>
                     </div>
