updating the cell inputs

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="card bg-light">
                         <div class="card-body">
                             <div>
-                                Jaydeep_Mistry.education()
+                                Jaydeep_Mistry.education().sort_values(by = "<a class="text-danger">Year</a>")
                             </div>
                         </div>
                     </div>
@@ -269,7 +269,7 @@
                     <div class="card bg-light">
                         <div class="card-body text-break">
                             <div>
-                                Jaydeep_Mistry.contact.sort(by = '<a class="text-danger">Priority</a>')
+                                Jaydeep_Mistry.contact().sort_values(by = "<a class="text-danger">Priority</a>")
                             </div>
                         </div>
                     </div>
