fixing odd cell input

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="card bg-light">
                         <div class="card-body">
                             <div>
-                                Jaydeep_Mistry.education().sort_values(by = "<a class="text-danger">Year</a>")
+                                Jaydeep_Mistry.education()
                             </div>
                         </div>
                     </div>
@@ -242,7 +242,7 @@
                 </div>
             </div>
             <div style="margin-left: 78px;">
-                <div class="table-responsive-xl">
+                <div class="table-responsive">
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -269,7 +269,7 @@
                     <div class="card bg-light">
                         <div class="card-body text-break">
                             <div>
-                                Jaydeep_Mistry.contact().sort_values(by = "<a class="text-danger">Priority</a>")
+                                Jaydeep_Mistry.contact()
                             </div>
                         </div>
                     </div>
