--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             </p>
                         </div>
                         <div class="col col-md-4">
-                            <img src="assets/Mistry_Jaydeep_Square.jpg" alt="Picture of Jaydeep's Face"
+                            <img src="assets/2034-linkedin-profile-picture.jpeg" alt="Picture of Jaydeep's Face"
                                 class="img-thumbnail">
                         </div>
                     </div>
@@ -409,13 +409,14 @@ Styled using <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></
 
             var location_plot_data = [{
                 type: 'scattermapbox',
-                lat: ['43.613193'],
-                lon: ['-79.343604'],
+                lat: ['43.77656'],
+                lon: ['-79.34410'],
                 mode: 'markers',
                 marker: {
                     size: 14,
                     color: 'red',
                 },
+                opacity: 0.8,
                 text: ['Toronto'],
                 textposition: "bottom right"
             }];
@@ -423,7 +424,7 @@ Styled using <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></
             var location_plot_layout = {
                 autosize: true,
                 hovermode: 'closest',
-                mapbox: { style: "open-street-map", center: { lat: 43.7, lon: -79.343604 }, zoom: 9 },
+                mapbox: { style: "open-street-map", center: { lat: 43.776, lon: -79.344 }, zoom: 9 },
                 margin: { r: 0, t: 50, b: 0, l: 0 },
                 title: {
                     text: 'Toronto, Ontario, Canada; Remote',
